--- a/menu/src/main/resources/templates/stock.html
+++ b/menu/src/main/resources/templates/stock.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-     <script src="js/vis.js"></script>
-     <!--<link rel ="stylesheet" href="css/weather.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel ="stylesheet" href="css/weather.css">
 </head>
+
 <body>
 
 <nav class="navbar navbar-inverse">
@@ -55,91 +57,39 @@
                             <p th:text ="'Closed Price: ' +${closedStock}"></p>
                             <p th:text ="'Stock Price High: ' +${stockHi}"></p>
                             <p th:text ="'Stock Price Low: ' +${stockLo}"></p>
-                            <p id="test"></p>
-                            <p id="test2"></p>
+                            <img src="stockgraph.jpg" alt="graph">
 
-                            <div id="visualization"></div>
-                            <script th:inline="javascript">
-                                var stockopen1 = [[${openStock1}]];
-                                var stockclose1 = [[${closedStock1}]];
-                                var stockhi1 = [[${stockHi1}]];
-                                var stocklo1 = [[${stockLo1}]];
+<!--                            <script th:inline="javascript">-->
+<!--                                var stockopen1 = [[${openStock1}]];-->
+<!--                                var stockclose1 = [[${closedStock1}]];-->
+<!--                                var stockhi1 = [[${stockHi1}]];-->
+<!--                                var stocklo1 = [[${stockLo1}]];-->
 
-                                var stockopen2 = [[${openStock2}]];
-                                var stockclose2 = [[${closedStock2}]];
-                                var stockhi2 = [[${stockHi2}]];
-                                var stocklo2 = [[${stockLo2}]];
+<!--                                var stockopen2 = [[${openStock2}]];-->
+<!--                                var stockclose2 = [[${closedStock2}]];-->
+<!--                                var stockhi2 = [[${stockHi2}]];-->
+<!--                                var stocklo2 = [[${stockLo2}]];-->
 
-                                var stockopen3 = [[${openStock3}]];
-                                var stockclose3 = [[${closedStock3}]];
-                                var stockhi3 = [[${stockHi3}]];
-                                var stocklo3 = [[${stockLo3}]];
+<!--                                var stockopen3 = [[${openStock3}]];-->
+<!--                                var stockclose3 = [[${closedStock3}]];-->
+<!--                                var stockhi3 = [[${stockHi3}]];-->
+<!--                                var stocklo3 = [[${stockLo3}]];-->
 
-                                var stockopen4 = [[${openStock4}]];
-                                var stockclose4 = [[${closedStock4}]];
-                                var stockhi4 = [[${stockHi4}]];
-                                var stocklo4 = [[${stockLo4}]];
+<!--                                var stockopen4 = [[${openStock4}]];-->
+<!--                                var stockclose4 = [[${closedStock4}]];-->
+<!--                                var stockhi4 = [[${stockHi4}]];-->
+<!--                                var stocklo4 = [[${stockLo4}]];-->
 
-                                var stockopen5 = [[${openStock5}]];
-                                var stockclose5 = [[${closedStock5}]];
-                                var stockhi5 = [[${stockHi5}]];
-                                var stocklo5 = [[${stockLo5}]];
+<!--                                var stockopen5 = [[${openStock5}]];-->
+<!--                                var stockclose5 = [[${closedStock5}]];-->
+<!--                                var stockhi5 = [[${stockHi5}]];-->
+<!--                                var stocklo5 = [[${stockLo5}]];-->
 
-                                var stockopen6 = [[${openStock6}]];
-                                var stockclose6 = [[${closedStock6}]];
-                                var stockhi6 = [[${stockHi6}]];
-                                var stocklo6 = [[${stockLo6}]];
-
-                                document.getElementById("test").innerHTML = stockopen1;
-                                document.getElementById("test2").innerHTML = stockopen6;
-
-
-                            </script>
-
-
-                            <script>
-                                var ticker = document.getElementById("stockField").value;
-
-                                var currentDate = new Date()
-
-                                var day1 = currentDate.getDate()-7
-                                var day2 = currentDate.getDate()-6
-                                var day3 = currentDate.getDate()-5
-                                var day4 = currentDate.getDate()-4
-                                var day5 = currentDate.getDate()-3
-                                var day6 = currentDate.getDate()-2
-
-                                var month = currentDate.getMonth() + 1
-                                var month1 = month.toString()
-                                var year = currentDate.getFullYear()
-                                var date = year + "-" + "0" + month + "-" + "0" + day;
-                                var prevdate1 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day1.toString());
-                                var prevdate2 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day2.toString());
-                                var prevdate3 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day3.toString());
-                                var prevdate4 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day4.toString());
-                                var prevdate5 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day5.toString());
-                                var prevdate6 = year.toString() + "-" + "0" + month.toString() + "-" + "0" + (day6.toString());
-                                //2021-03-09
-                            </script>
-
-                            <script>
-                                var container = document.getElementById('visualization');
-                                var items = [
-                                    {x: prevdate1, y: stockopen1},
-                                    {x: prevdate2, y: stockopen2},
-                                    {x: prevdate3, y: stockopen3},
-                                    {x: prevdate4, y: stockopen4},
-                                    {x: prevdate5, y: stockopen5},
-                                    {x: prevdate6, y: stockopen6},
-                                ];
-
-                                var dataset = new vis.DataSet(items);
-                                var options = {
-                                    start: prevdate,
-                                    end: prevdate5
-                                };
-                                var Graph2d = new vis.Graph2d(container, dataset, options);
-                            </script>
+<!--                                var stockopen6 = [[${openStock6}]];-->
+<!--                                var stockclose6 = [[${closedStock6}]];-->
+<!--                                var stockhi6 = [[${stockHi6}]];-->
+<!--                                var stocklo6 = [[${stockLo6}]];-->
+<!--                            </script>-->
                         </ul>
                     </form>
                 </div>
@@ -151,6 +101,5 @@
 </div>
 
 </div>
-
 </body>
 </html>
