Final front end changes

--- a/menu/src/main/resources/static/css/main.css
+++ b/menu/src/main/resources/static/css/main.css
@@ -75,7 +75,7 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align_items: center;
+    align-items: center;
     flex-wrap: wrap;
     max-width: 100%;
     margin: 40px 0;
